fixed the overlapping issue of footer

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
   object-fit: cover;
 }
 .container {
-  height: 155vh;
+  /* height: 155vh; */
   width: 80%;
   margin: 0 auto;
   padding: 10px;
@@ -41,7 +41,6 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  
 }
 .project {
   background-color: white;
@@ -61,7 +60,7 @@ h2 {
   padding: 10px;
 }
 #contact-info p {
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 .contact-info a:hover {
   text-decoration: underline;
@@ -70,8 +69,9 @@ footer {
   background-color: #4caf50;
   color: white;
   text-align: center;
-  padding: 2.5px 0;
+  padding: 1.5px 0;
   position: fixed;
+  height: 40px;
   width: 100%;
   bottom: 0;
 }
@@ -92,7 +92,7 @@ footer {
     justify-content: flex-start;
     align-items: center;
     gap: 3rem;
-    padding-left:1rem;
+    padding-left: 1rem;
   }
   .profile-image {
     width: 20%;
@@ -104,9 +104,9 @@ footer {
     width: 10%;
   }
   #contact-info {
-  height: 10rem;
-}
-footer {
- height: 2.5rem;
-}
+    height: 10rem;
+  }
+  footer {
+    height: 2.5rem;
+  }
 }
